web/wp-content/themes/cncf-twenty-two/source/scss/blocks/_block-quote.scss
body .wp-block-quote,
#editor .wp-block-quote {
	max-width: 900px;
	border-left: 0 !important;
	padding-left: 0;
	line-height: 175%;
	font-size: 22px;
	@media (min-width: 1200px) {
		font-size: 36px;
	}
	cite {
		font-size: 16px;
		display: block;
		line-height: 1.5;
		color: $gray-700;
		max-width: 95%;
		letter-spacing: 0.02em;
		@media (min-width: 500px) {
			max-width: min(80%, 800px);
		}
	}
	&[class*='has-'] {
		p {
			font-size: inherit;
			@media (min-width: 1200px) {
				font-size: inherit;
			}
		}
	}
	&.is-style-smaller-quote {
		font-size: 18px;
		@media (min-width: 1200px) {
			font-size: 22px;
		}
	}
	// Not sure where this is/was used?
	// &.has-normal-font-size {
	// 	p {
	// 		line-height: 175%;
	// 		letter-spacing: 0.02em;
	// 		font-size: 16px;
	// 		@media (min-width: 1200px) {
	// 			font-size: 22px;
	// 			line-height: 160%;
	// 		}
	// 	}
	// 	cite {
	// 		font-size: 16px;
	// 	}
	// }
}

